# aibom-test

./: .dockerignore  .gitignore  Dockerfile  Pipfile  README.md  aibom-output-new.json  aibom-scan-with-prompts.json  docker-compose.yml  env.example  pyproject.toml  requirements.txt  sample_app.py
.github/workflows/: cd-deploy.yml  ci.yml  security-scan.yml
app/: __init__.py  main.py
infrastructure/: app.py  cdk.json  requirements.txt
infrastructure/stacks/: __init__.py  bedrock_stack.py  compute_stack.py  monitoring_stack.py  network_stack.py  security_stack.py  storage_stack.py
mcp_server/: __init__.py  config.json  prompts.py  pyproject.toml  server.py
prompts/: __init__.py  agentic_prompts.py  chain_of_thought.py  evaluation_prompts.py  few_shot_examples.py  model_specific_prompts.py  security_prompts.py  structured_output.py  system_prompts.py  tool_use_prompts.py
scripts/: deploy.sh  deploy_bedrock_agent.py  run-security-scans.sh  setup-local.sh
