[project]
name = "aibom-test"
version = "1.0.0"
description = "AI Bill of Materials testing project with AWS Bedrock integration"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = {text = "MIT"}

[tool.setuptools]
packages = ["app", "prompts", "mcp_server"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

